sprint 7 correction after review 2